correct conflict in css files

--- a/frontend/src/pages/login_page/Login.css
+++ b/frontend/src/pages/login_page/Login.css
@@ -113,9 +113,9 @@ body{
     background: #5222fd;
 }
 
-span {
+.login_error {
     color: #e74c3c;
-    font-size: 14px;
+    font-size: 13px;
     margin-top: 5px;
     display: block;
 }
