--- a/frontend/src/pages/register_page/Register.css
+++ b/frontend/src/pages/register_page/Register.css
@@ -16,31 +16,31 @@ body{
 }
 
 
-.container{
+.register_container{
     width: 440px;
-    padding: 40px 32px;
+    padding: 5px 32px;
     border-radius: 8px;
     box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
 }
 
-.container h1{
+.register_container h1{
     font-size: 1.6rem;
 }
 
-.container .social-login{
+.register_container .social-login{
     display: flex;
     gap: 16px;
     margin-top: 20px;
 }
 
 
-.container .divider{
+.register_container .divider{
     display: flex;
     align-items: center;
     gap: 20px;
 }
 
-.container .divider .line{
+.register_container .divider .line{
     height: 1px;
     width: 100%;
     background: #1d1d1d;
@@ -48,7 +48,7 @@ body{
     margin: 30px 0 16px;
 }
 
-.container form label{
+.register_container form label{
     color: #1d1d1d;
     font-size: 14px;
     font-weight: bold;
@@ -57,11 +57,11 @@ body{
     margin-top: 12px;
 }
 
-.container form .custome-input{
+.register_container form .custome-input{
     position: relative;
 }
 
-.container form .custome-input input{
+.register_container form .custome-input input{
     color: #1d1d1d;
     font-size: 16px;
     font-weight: 500;
@@ -77,11 +77,11 @@ body{
     transition: all 0.3s ease;
 }
 
-.container form .custome-input input:focus{
+.register_container form .custome-input input:focus{
     border-color: #5222fd;
 }
 
-.container form .custome-input i{
+.register_container form .custome-input i{
     position: absolute;
     font-size: 28px;
     right: 10px;
@@ -89,11 +89,11 @@ body{
     transition: all 0.3s ease;
 }
 
-.container form .custome-input input:focus + i{
+.register_container form .custome-input input:focus + i{
     color: #5222fd;
 }
 
-.container form .login{
+.register_container form .register{
     width: 100%;
     margin-top: 30px;
     background: #6b43ff;
@@ -109,24 +109,24 @@ body{
     transition: all 0.3s ease;
 }
 
-.container form .login:hover{
+.register_container form .register:hover{
     background: #5222fd;
 }
 
-span {
+.register_error {
     color: #e74c3c;
-    font-size: 14px;
+    font-size: 13px;
     margin-top: 5px;
     display: block;
 }
 
-.container .links{
+.register_container .links{
     display: flex;
     justify-content: space-between;
     margin-top: 30px;
 }
 
-.container .links a{
+.register_container .links a{
     color: #6b43ff;
     font-weight: 600;
     font-size: 1rem;
@@ -135,6 +135,6 @@ span {
     text-decoration-color: #6b43ff;
 }
 
-.container .links a:hover{
+.register_container .links a:hover{
     text-decoration: underline;
 }
